# grpc-py-cli

./: .gitignore  pyproject.toml
src/grpc_py_cli/: cli.py  utils.py
