[tool.poetry]
name = "grpc-py-cli"
version = "0.1.0"
description = ""
authors = ["Feiyu Zheng <feiyuzheng98@gmail.com>"]
readme = "README.md"
packages = [{include = "grpc_py_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
